# elaoms

./: .env  .env.example  .env.production  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
app/: __init__.py  config.py  main.py
app/auth/: __init__.py  hmac.py
app/memory/: __init__.py  client.py  extraction.py  profiles.py
app/models/: __init__.py  requests.py  responses.py
app/services/: __init__.py  agent_cache.py  openai_service.py
app/utils/: __init__.py  http_client.py  logging.py
app/webhooks/: __init__.py  client_data.py  post_call.py  search_data.py
docs/: MIGRATION_GUIDE.md  TWO_TIER_MEMORY.md  cloud-deployment-guide.md  data-model-erd.md  elaoms-client-data.md  elaoms-post-call.md  elaoms-search-data.md  elevenlabs-agent-configuration-guide.md  refactor_plan.md
elevenlabs_openmemory_integration.egg-info/: SOURCES.txt  requires.txt
examples/agents/: 01-customer-support.json  02-sales-lead-qualification.json  03-healthcare-appointment.json  04-ecommerce-shopping.json  05-it-helpdesk.json  06-financial-services.json  07-hospitality-concierge.json  08-memoir-interviewer.json  09-walter-business-memoir.json  README.md  create_agent.py
examples/tools/: search-data-tool-api.json  search-data-tool.json
knowledge-base/walter/: 01-interview-guidelines.md  02-interview-questionnaire-framework.md  03-organization-type-playbooks.md  04-story-extraction-techniques.md  05-people-relationship-mapping.md  06-timeline-milestone-documentation.md  07-answer-review-summary-guidelines.md  08-difficult-conversation-handling.md
payloads/: client_data.json  post_call_transcription.json
scripts/: create-search-data-tool.sh  create_search_data_tool.py  install-ubuntu-server.sh  run_local.sh  setup_firewall.sh  setup_ubuntu.sh
tests/: __init__.py  conftest.py  test_agent_cache.py  test_auth.py  test_config.py  test_integration.py  test_integration_full_flow.py  test_logging_utils.py  test_memory.py  test_memory_profiles.py  test_models.py  test_openai_service.py  test_webhooks.py
(+55 files in other folders)
